--- a/FE/package.json
+++ b/FE/package.json
@@ -10,9 +10,9 @@
   "dependencies": {
     "axios": "^0.24.0",
     "core-js": "^3.6.5",
-    "i18n": "^0.13.4",
     "luxon": "^2.3.0",
     "vue": "^2.6.11",
+    "vue-i18n": "^8.26.8",
     "vue-router": "^3.2.0",
     "vuetify": "^2.4.0",
     "vuex": "^3.4.0"
